<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#93000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white">

    <com.accurascandemo.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:typeface="ALLER_STD_DISPLAY" />

    <com.accurascandemo.view.CustomTextView
        android:id="@+id/tvExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/email_title"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:typeface="ALLER_STD_REG" />

    <com.accurascandemo.view.CustomEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_bg"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/fifteen"
        app:typeface="ALLER_STD_REG"
        android:layout_marginStart="@dimen/margin_fifteen"
        android:layout_marginEnd="@dimen/margin_fifteen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:layout_marginTop="@dimen/margin_fifteen">

        <com.accurascandemo.view.CustomTextView
            android:id="@+id/tvOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/white"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            app:typeface="ALLER_STD_REG" />

        <com.accurascandemo.view.CustomTextView
            android:id="@+id/tvCancelDia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1dp"
            android:gravity="center"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/text_cancel"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            app:typeface="ALLER_STD_REG" />

    </LinearLayout>

    </LinearLayout>

</LinearLayout>